<resources>
    <string name="app_name">SuitMedia</string>
    <string name="name">Name</string>
    <string name="palindrome">Palindrome</string>
    <string name="check">CHECK</string>
    <string name="next">NEXT</string>
    <string name="second_screen">Second Screen</string>
    <string name="welcome">Welcome</string>
    <string name="your_name">Your Name</string>
    <string name="choose_a_user">Choose a User</string>
    <string name="choose_user">Choose User</string>
    <string name="third_screen">Third Screen</string>
    <string name="name_text">%1$s %2$s</string>
    <string name="you_re_on_the_last_page">You\'re on the Last Page</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_second_screen">SecondScreenActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="user_not_selected_yet">User Not Selected Yet</string>
    <string name="image_button">image button</string>
    <string name="background">Background</string>
</resources>